--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <table id="Table_01" width="600" height="1285" border="0" cellpadding="0" cellspacing="0">
 	<tr>
 		<td>
-			<img src="https://i.imgur.com/Flq541A.png" width="600" style="display: block" height="1184" border="0" alt=""></td>
+			<img src="https://i.imgur.com/3rIZz1k.png" width="600" style="display: block" height="1184" border="0" alt=""></td>
 	</tr>
 	<tr>
 		<td>
